// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`renderer/components/layout/Centered.tsx > should render itself & its children - full height false 1`] = `
<div>
  <div
    data-color-mode="light"
    data-dark-theme="dark"
    data-light-theme="light"
  >
    <div
      class="prc-src-BaseStyles-aopSS"
      data-portal-root="true"
    >
      <div
        class="prc-Stack-Stack-UQ9k6"
        data-align="center"
        data-direction="vertical"
        data-justify="center"
        data-padding="spacious"
        data-wrap="nowrap"
      >
        Test
      </div>
    </div>
  </div>
</div>
`;

exports[`renderer/components/layout/Centered.tsx > should render itself & its children - full height true 1`] = `
<div>
  <div
    data-color-mode="light"
    data-dark-theme="dark"
    data-light-theme="light"
  >
    <div
      class="prc-src-BaseStyles-aopSS"
      data-portal-root="true"
    >
      <div
        class="h-screen prc-Stack-Stack-UQ9k6"
        data-align="center"
        data-direction="vertical"
        data-justify="center"
        data-padding="spacious"
        data-wrap="nowrap"
      >
        Test
      </div>
    </div>
  </div>
</div>
`;
